--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family JetBrainsMono Nerd Font Mono
-bold_font on
-italic_font auto
-bold_italic_font auto
+bold_font JetBrainsMono Nerd Font Mono
+italic_font JetBrainsMono Nerd Font Mono
+bold_italic_font JetBrainsMono Nerd Font Mono
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -271,7 +271,7 @@ cursor_text_color #FFF4E5
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-cursor_shape beam
+#:cursor_shape beam
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -282,13 +282,13 @@ cursor_shape beam
 #: the cursor shape to beam at shell prompts. You can avoid this by
 #: setting shell_integration to no-cursor.
 
-cursor_shape_unfocused hollow
+#cursor_shape_unfocused hollow
 
 #: Defines the text cursor shape when the OS window is not focused.
 #: The unfocused cursor shape can be one of block, beam, underline,
 #: hollow.
 
-cursor_beam_thickness 2.0
+#cursor_beam_thickness 2.0
 
 #: The thickness of the beam cursor (in pts).
 
