save current state for arch reset

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -10,14 +10,11 @@
 source = $HOME/.config/hypr/keybindings.conf
 
 
-
-
 # -----------------------------------------------------
 # -------------------- MONITORS -----------------------
 # -----------------------------------------------------
 monitor=desc:LG Electronics LG Ultra HD 0x00015DC4,highres@highr,auto-left,2.0
 monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-right,2.0
-
 
 xwayland {
     force_zero_scaling = true
@@ -28,6 +25,7 @@ workspace=2
 workspace=3
 workspace=4
 workspace=5
+
 
 # -----------------------------------------------------
 # --------------------- KEYBOARD ----------------------
@@ -49,7 +47,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.35
+    sensitivity = -0.75
     accel_profile = adaptive
 
     touchpad {
@@ -60,13 +58,13 @@ input {
     }
 }
 
+
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
 exec-once = hyprpaper
-
-#exec-once = hyprpm reload  #-n
-#exec = killall -9 hypridle; hypridle
+exec = killall -9 hypridle; hypridle
+# exec-once = hyprpm reload  #-n
 
 
 # -----------------------------------------------------
@@ -89,22 +87,23 @@ cursor {
 # -----------------------------------------------------
 # --------------------- THEME -------------------------
 # -----------------------------------------------------
-exec-once = $HOME/.config/hypr/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
+exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
 
 
 # -----------------------------------------------------
 # -------------------- AUTOSTART ----------------------
 # -----------------------------------------------------
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || hyprctl notify -1 10000 "rgb(ff1ea3)" "polkit-gnome could not be started."
-
+# exec = python -m fabric execute bar "app.quit()" -j; $HOME/.config/fabric/.venv/bin/python $HOME/.config/fabric/config.py
+exec = ags list | grep astal && ags quit --instance astal; ags run
 
 # -----------------------------------------------------
 # -------------------- ENVIRONMENT --------------------
 # -----------------------------------------------------
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = WLR_RENDERER, vulkan
-env = WLR_SCALE_FILTER, nearest
+#env = WLR_RENDERER, vulkan
+#env = WLR_SCALE_FILTER, nearest
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
@@ -182,7 +181,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
 
     # https://www.cssportal.com/css-cubic-bezier-generator/
     bezier = easeOutExpo, 0.19, 1, 0.22, 1
