--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = $HOME/temp.jpg
+preload = $HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
 
 splash = false
 
-wallpaper = ,$HOME/temp.jpg
+wallpaper = ,$HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
