--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,6 +11,11 @@ bold_font JetBrainsMono Nerd Font Mono
 italic_font JetBrainsMono Nerd Font Mono
 bold_italic_font JetBrainsMono Nerd Font Mono
 
+font_family Monaspace Neon
+bold_font Monaspace Neon
+italic_font Monaspace Neon
+bold_italic_font Monaspace Neon
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: +list-fonts` command. By default they are derived automatically, by
@@ -721,7 +726,7 @@ strip_trailing_spaces never
 #: because kitty is so fast that partial screen updates will be drawn.
 #: This setting is ignored when the input buffer is almost full.
 
-# sync_to_monitor yes
+sync_to_monitor yes
 
 #: Sync screen updates to the refresh rate of the monitor. This
 #: prevents screen tearing
@@ -1052,7 +1057,7 @@ confirm_os_window_close 0
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
 #: that controls how much the corresponding cell fades into the
-#: background, with zero being no fade and one being full fade. You
+#: b ackground, with zero being no fade and one being full fade. You
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
@@ -1154,9 +1159,9 @@ confirm_os_window_close 0
 #: Color scheme {{{
 
 foreground #edecee
-background #16161E
+background #121212
 
-#: The foreground and background colors.
+#: The foreground and b ackground colors.
 
 background_opacity 1.0
 
