--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -2,6 +2,7 @@ binds {
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
     bind = ALT, TAB, exec, hyprctl dispatch overview:toggle
     bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
+    bind = CTRL_ALT, L, exec, hyprlock
 
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 50% 40%
@@ -22,23 +23,17 @@ binds {
     bind = SUPER_SHIFT, A, exec, pkill agsv1; agsv1
 
     # Aylur's GTK Shell Windows and Kando Pie Menu
-    bind = SUPER, R, exec, wofi --show drun
+    bind = SUPER, R, exec, rofi -show drun
     bind = SUPER, S, exec, agsv1 -t SidebarSettings
-    bind = CTRL, SPACE, global, kando:main-menu
 
     # Capturing
     bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
     bind = SHIFT, PRINT, exec, hyprshot -m window -z -o ~/Pictures/Screenshots
-    # bind = SUPER_SHIFT, S, exec, hyprshot -m region -z -o ~/Pictures/Screenshots
+    bind = SUPER, PRINT, exec, hyprshot -m region -z -o ~/Pictures/Screenshots
     # Manual region screenshot while opening image in swappy
-    bind = SUPER_SHIFT, S, exec, capture --image
-    bind = SUPER_SHIFT, PRINT, exec, capture --video
+    bind = SUPER_SHIFT, S, exec, $HOME/.local/bin/capture --image
+    bind = SUPER_SHIFT, PRINT, exec, $HOME/.local/bin/capture --video
 
-    bind = CTRL_ALT, L, exec, hyprlock
-    # bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
-    # bind = CTRL_ALT, V, exec, kitty --title "cava" --override background_opacity=0 -e "cava"
-
-    # Move focus with mainMod + arrow keys
     bind = SUPER, H, movefocus, l
     bind = SUPER, L, movefocus, r
     bind = SUPER, K, movefocus, u
@@ -50,7 +45,6 @@ binds {
     bind = SUPER_SHIFT, k, resizeactive, 0 -$INCREMENT
     bind = SUPER_SHIFT, j, resizeactive, 0 $INCREMENT
 
-    # Switch workspaces with mainMod + [0-9]
     bind = SUPER, 1, workspace, 1
     bind = SUPER, 2, workspace, 2
     bind = SUPER, 3, workspace, 3
@@ -58,7 +52,6 @@ binds {
     bind = SUPER, 5, workspace, 5
     bind = SUPER, 6, workspace, 6
 
-    # Move active window to a workspace with mainMod + SHIFT + [0-9]
     bind = SUPER SHIFT, 1, movetoworkspace, 1
     bind = SUPER SHIFT, 2, movetoworkspace, 2
     bind = SUPER SHIFT, 3, movetoworkspace, 3
@@ -66,31 +59,20 @@ binds {
     bind = SUPER SHIFT, 5, movetoworkspace, 5
     bind = SUPER SHIFT, 6, movetoworkspace, 6
 
-    # Scroll through existing workspaces with mainMod + scroll
     bind = SUPER, mouse_down, workspace, e+1
     bind = SUPER, mouse_up, workspace, e-1
 
-    # Move/resize windows with mainMod + LMB/RMB and dragging
     bindm = SUPER, mouse:272, movewindow
     bindm = SUPER, mouse:273, resizewindow
 
-    # Media controls
     bindl = , XF86AudioPlay, exec, playerctl play-pause
     bindl = , XF86AudioPrev, exec, playerctl previous
     bindl = , XF86AudioNext, exec, playerctl next
 
-    # Volume
     bindle = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/sound.sh --up
     bindle = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/sound.sh --down
     bindl = , XF86AudioMute, exec, ~/.config/hypr/scripts/sound.sh --mute
 
-    # Brightness
     binde = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
     binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
-
-    # Unixporn
-    bind = SUPER_SHIFT, F1, exec, [float; move 1% 5%; size 30% 25%] bash -c "kitty"
-    bind = SUPER_SHIFT, F2, exec, [float; move 1% 35%; size 30% 25%] bash -c "kitty"
-    bind = SUPER_SHIFT, F3, exec, [float; move 1% 65%; size 30% 25%] bash -c "kitty"
-
 }
