continued with ags

--- a/hyprland/.config/hypr/hypridle.conf
+++ b/hyprland/.config/hypr/hypridle.conf
@@ -6,11 +6,11 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
-listener {
-    timeout = 60
-    on-timeout = brightnessctl -sd tpacpi::kbd_backlight set 0
-    on-resume = brightnessctl -rd tpacpi::kbd_backlight
-}
+# listener {
+#     timeout = 60
+#     on-timeout = brightnessctl -sd tpacpi::kbd_backlight set 0
+#     on-resume = brightnessctl -rd tpacpi::kbd_backlight
+# }
 
 listener {
     timeout = 60
