--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -70,6 +70,7 @@ exec = killall -9 hypridle; hypridle
 # -----------------------------------------------------
 # --------------------- CURSOR ------------------------
 # -----------------------------------------------------
+
 $CURSOR = BreezeX-RosePine-Linux        # BreezeX-RosePineDawn-Linux BreezeX-RosePine-Linux
 $HYPR_CURSOR = rose-pine-hyprcursor     # currently no light/dawn version available
 $CURSOR_SIZE = 32                       # 16, 24, 32, 48
@@ -77,9 +78,10 @@ $CURSOR_SIZE = 32                       # 16, 24, 32, 48
 env = XCURSOR_SIZE, $CURSOR_SIZE
 env = XCURSOR_THEME, $CURSOR
 
-env = HYPRCURSOR_THEME,$HYPR_CURSOR
-env = HYPRCURSOR_SIZE,$CURSOR_SIZE
+env = HYPRCURSOR_SIZE, $CURSOR_SIZE
+env = HYPRCURSOR_THEME, $HYPR_CURSOR
 
+env = GTK_THEME,Adwaita-dark
 cursor {
     no_hardware_cursors = true
 }
@@ -87,7 +89,7 @@ cursor {
 # -----------------------------------------------------
 # --------------------- THEME -------------------------
 # -----------------------------------------------------
-exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
+# exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
 
 
 # -----------------------------------------------------
@@ -107,10 +109,11 @@ exec = ags list | grep astal && ags quit --instance astal; ags run
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
-# env = QT_AUTO_SCREEN_SCALE_FACTOR, 2
-# env = QT_QPA_PLATFORM, wayland
-# env = QT_WAYLAND_DISABLE_WINDOWDECORATION, 1
-# env = QT_QPA_PLATFORMTHEME, qt5ct
+env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = XDG_MENU_PREFIX,arch-
 
 env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -120,9 +123,12 @@ env = XDG_SESSION_DESKTOP,Hyprland
 # env = CLUTTER_BACKEND,wayland
 
 # See https://wiki.hyprland.org/Nvidia
+env = GBM_BACKEND,nvidia-drm
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
+env = __GL_GSYNC_ALLOWED,0
+env = __GL_VRR_ALLOWED,0
 
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = EGL_PLATFORM,wayland
@@ -181,7 +187,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = false
+    enabled = true
 
     # https://www.cssportal.com/css-cubic-bezier-generator/
     bezier = easeOutExpo, 0.19, 1, 0.22, 1
