--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -22,6 +22,8 @@ binds {
     bind = SUPER_SHIFT, R, exec, hyprctl reload
     bind = SUPER_SHIFT, A, exec, pkill agsv1; agsv1
 
+    bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
+
     # Aylur's GTK Shell Windows and Kando Pie Menu
     bind = SUPER, R, exec, rofi -show drun
     bind = SUPER, S, exec, agsv1 -t SidebarSettings
