--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family JetBrainsMono Nerd Font Mono
-bold_font JetBrainsMono Nerd Font Mono
-italic_font JetBrainsMono Nerd Font Mono
-bold_italic_font JetBrainsMono Nerd Font Mono
+# font_family JetBrainsMono Nerd Font Mono
+# bold_font JetBrainsMono Nerd Font Mono
+# italic_font JetBrainsMono Nerd Font Mono
+# bold_italic_font JetBrainsMono Nerd Font Mono
 
 font_family Monaspace Neon
 bold_font Monaspace Neon
