--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -7,14 +7,18 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
+$SUCCESS_NOTIFY = hyprctl notify -1 10000 "rgb(07ffca)"
+$ERROR_NOTIFY = hyprctl notify -1 10000 "rgb(ff6767)"
+
 source = $HOME/.config/hypr/keybindings.conf
+source = $HOME/.config/hypr/rules.conf
 
 
 # -----------------------------------------------------
 # -------------------- MONITORS -----------------------
 # -----------------------------------------------------
-monitor=desc:LG Electronics LG Ultra HD 0x00015DC4,highres@highr,auto-left,2.0
-monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-right,2.0
+monitor=desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
+monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-left,2.0
 
 xwayland {
     force_zero_scaling = true
@@ -46,6 +50,7 @@ input {
     repeat_rate = 50
 
     follow_mouse = 1
+    scroll_factor = 2.5
 
     sensitivity = -0.75
     accel_profile = adaptive
@@ -62,8 +67,8 @@ input {
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
-exec-once = hyprpaper
-exec = killall -9 hypridle; hypridle
+exec-once = hyprpaper || $ERROR_NOTIFY "Hyprpaper could not be started."
+exec-once = hypridle || $ERROR_NOTIFY "Hypridle could not be started."
 # exec-once = hyprpm reload  #-n
 
 
@@ -82,6 +87,7 @@ env = HYPRCURSOR_SIZE, $CURSOR_SIZE
 env = HYPRCURSOR_THEME, $HYPR_CURSOR
 
 env = GTK_THEME,Adwaita-dark
+
 cursor {
     no_hardware_cursors = true
 }
@@ -95,9 +101,8 @@ cursor {
 # -----------------------------------------------------
 # -------------------- AUTOSTART ----------------------
 # -----------------------------------------------------
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || hyprctl notify -1 10000 "rgb(ff1ea3)" "polkit-gnome could not be started."
-# exec = python -m fabric execute bar "app.quit()" -j; $HOME/.config/fabric/.venv/bin/python $HOME/.config/fabric/config.py
-exec = ags list | grep astal && ags quit --instance astal; ags run
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
+exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
 
 # -----------------------------------------------------
 # -------------------- ENVIRONMENT --------------------
@@ -187,7 +192,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
 
     # https://www.cssportal.com/css-cubic-bezier-generator/
     bezier = easeOutExpo, 0.19, 1, 0.22, 1
