--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -4,7 +4,9 @@
 $BACKGROUND_IMAGE = $HOME/.config/hypr/backgrounds/linux-elitist/tokyo-lofi-healing-1.png
 $AVATAR_IMAGE = $HOME/.config/hypr/assets/avatar.jpg
 $FONT = Monaspace Xenon
+$FONT = Monaspace Krypton
 # $FONT = SF Pro Display
+# $FONT = Spleen
 
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 general {
@@ -83,7 +85,7 @@ label {
     color = rgba(49, 183, 242, 0.75)
     font_size = 250
     # font_family = SF Pro Display Bold
-    font_family = Monaspace Xenon
+    font_family = $FONT
 
     shadow_passes = 3
     shadow_size = 4
