--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -16,6 +16,11 @@ bold_font Monaspace Neon
 italic_font Monaspace Neon
 bold_italic_font Monaspace Neon
 
+font_family Monaspace Krypton
+bold_font Monaspace Krypton
+italic_font Monaspace Krypton
+bold_italic_font Monaspace Krypton
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: +list-fonts` command. By default they are derived automatically, by
