--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "zsh/.config/zsh"]
 	path = zsh/.config/zsh
 	url = https://github.com/tonigineer/zsh
+	branch = main
 [submodule "nvim/.config/nvim"]
 	path = nvim/.config/nvim
 	url = https://github.com/tonigineer/nvim
+	branch = main
