wip from train ride

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -2,4 +2,4 @@ preload = $HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
 
 splash = false
 
-wallpaper = ,$HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
+# wallpaper = ,$HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
