new window does not work

--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -20,13 +20,11 @@ binds {
     bind = SUPER_SHIFT, Q, exit
 
     bind = SUPER_SHIFT, R, exec, hyprctl reload
-    bind = SUPER_SHIFT, A, exec, pkill agsv1; agsv1
 
     bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
 
     # Aylur's GTK Shell Windows and Kando Pie Menu
     bind = SUPER, R, exec, rofi -show drun
-    bind = SUPER, S, exec, agsv1 -t SidebarSettings
 
     # Capturing
     bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
@@ -35,6 +33,9 @@ binds {
     # Manual region screenshot while opening image in swappy
     bind = SUPER_SHIFT, S, exec, $HOME/.local/bin/capture --image
     bind = SUPER_SHIFT, PRINT, exec, $HOME/.local/bin/capture --video
+
+    # Misc
+    bind = SUPER, Y, exec, mpv $(playerctl metadata xesam:url)
 
     bind = SUPER, H, movefocus, l
     bind = SUPER, L, movefocus, r
