shutdown menu implemented with submap and vim moves

--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -78,4 +78,14 @@ binds {
 
     binde = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
     binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
+
+    # Submap for Aylurs GTK Shell
+    bind = SUPER, SPACE, submap, ags
+    submap = ags
+
+    bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
+    bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
+    bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
+
+    submap = reset
 }
