adaptations for laptop

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,19 +17,23 @@ source = $HOME/.config/hypr/rules.conf
 # -----------------------------------------------------
 # -------------------- MONITORS -----------------------
 # -----------------------------------------------------
+# Desktop
 monitor=desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
 monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-left,2.0
-
-xwayland {
-    force_zero_scaling = true
-}
-
 workspace=1, monitor:DP-3, default:true
+
+# Lenovo X13Gen5
+monitor=desc:AU Optronics 0x6693,highres@highr,auto-left,1.25
+workspace=1, monitor:eDP-1, default:true
+
 workspace=2
 workspace=3
 workspace=4
 workspace=5
 
+xwayland {
+    force_zero_scaling = true
+}
 
 # -----------------------------------------------------
 # --------------------- KEYBOARD ----------------------
@@ -61,6 +65,17 @@ input {
         middle_button_emulation = false
         scroll_factor = 0.5
     }
+}
+
+device {
+    name = elan06c4:00-04f3:3209-touchpad
+    sensitivity = 0.25
+
+}
+
+device {
+    name = tpps/2-synaptics-trackpoint
+    sensitivity = -0.5
 }
 
 
