logging added to ags; hyprlock cleaned up

--- a/ags/.config/ags/tsconfig.json
+++ b/ags/.config/ags/tsconfig.json
@@ -16,7 +16,8 @@
       "@root/*": ["./*"],
       "@widgets/*": ["./widgets/*"],
       "@services/*": ["./services/*"],
-      "@windows/*": ["./windows/*"]
+      "@windows/*": ["./windows/*"],
+      "@logging": ["./logging"]
     }
   }
 }
