--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -10,12 +10,15 @@ $FONT = Monaspace Krypton
 
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 general {
-  grace = 0
+  grace = 30
   no_fade_out = true
   no_fade_in = true
   ignore_empty_input = true
   immediate_render = true
   hide_cursor = true
+  screencopy_mode = 0
+  fractional_scaling = 2
+  disable_loading_bar = true
 }
 
 background {
@@ -66,7 +69,7 @@ input-field {
 
 label {
     monitor =
-    text = $ATTEMPTS[go sports]
+    text = $ATTEMPTS[enter password]
     color = rgba(239, 236, 254, 0.35)
     font_size = 28
     font_family = $FONT
@@ -110,104 +113,95 @@ label {
 # ---------------------------------------------------------------------
 # ---------------------------------- USER -----------------------------
 # ---------------------------------------------------------------------
-# image {
-#     monitor =
-#     path = $AVATAR_IMAGE
-#     opacity = 0.5
-#     border_color = rgba(0, 0, 0, 0.75)
-#     border_size = 5
-#     size = 250
-#     rounding = -1
-#     rotate = 0
-#     reload_time = -1
-#     reload_cmd = 
-#     position = 0, -200
-#     halign = center
-#     valign = top
-# }
-
-# label {
-#     monitor =
-#     text = cmd[update:10000] echo " "
-#     color = rgba(242, 243, 244, 1.0)
-#     font_size = 32
-#     font_family = SF Pro Display
-#     position =-418, -575
-#     halign = right
-#     valign = top
+image {
+    monitor =
+    path = $AVATAR_IMAGE
+    opacity = 0.5
+    border_color = rgba(0, 0, 0, 0.75)
+    border_size = 5
+    size = 50
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd = 
+    position = 15, -15
+    halign = left
+    valign = top
 }
 
-# label {
-#     monitor =
-#     text = cmd[update:10000] echo "$USER"
-#     color = rgba(49, 183, 242, 0.75)
-#     font_size = 32
-#     font_family = $FONT
-#     position = 0, -475
-#     halign = center
-#     valign = top
-# }
+
+label {
+    monitor =
+    text = cmd[update:10000] echo "$USER"
+    color = rgba(49, 183, 242, 0.75)
+    font_size = 26
+    font_family = $FONT
+    position = 80, -22
+    halign = left
+    valign = top
+}
 
 # --------------------------------------------------------------------
 # ------------------------------ MUSIC INFO --------------------------
 # --------------------------------------------------------------------
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
-    color = rgba(239, 236, 254, 1.0)
-    font_size = 36
-    # font_family = SF Pro Display Bold
-    position = 200, -300
-    halign = left
-    valign = top
-}
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
+#     color = rgba(239, 236, 254, 1.0)
+#     font_size = 26
+#     # font_family = SF Pro Display Bold
+#     font_family = $FONT
+#     position = 200, -300
+#     halign = left
+#     valign = top
+# }
 
 label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --artist)"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 27
+    font_size = 20
     font_family = $FONT
-    position = 280, -400
+    position = 210, 90
     halign = left
-    valign = top
+    valign = bottom
 }
 
 label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --title)"
     color = rgba(239, 236, 254, 0.5)
-    font_size = 27
+    font_size = 20
     font_family = $FONT
-    position = 280, -450
+    position = 210, 55
     halign = left
-    valign = top
+    valign = bottom
 }
 
 label {
     monitor =
-    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --album)"
+    text = cmd[update:1000] echo "<i>$(~/.config/hypr/scripts/player.sh --album)</i>"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 21
+    font_size = 16
     font_family = $FONT
-    position = 280, -550
+    position = 210, 20
     halign = left
-    valign = top
+    valign = bottom
 }
 
 image {
     monitor =
     path = 
-    size = 350
+    size = 100
     rounding = 3 
     border_size = 1
     rotate = 0
     reload_time = 2
     reload_cmd = ~/.config/hypr/scripts/player.sh --arturl
-    position = 310, -625
-    halign = left
-    valign = top
-    opacity=0.5
+    position = -1825, 15
+    halign = center
+    valign = bottom
+    # opacity = 0.05
 }
 
 # ---------------------------------------------------------------------
@@ -215,11 +209,11 @@ image {
 # ---------------------------------------------------------------------
 label {
     monitor =
-    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/keyboard.sh --icon)  $(~/.config/hypr/scripts/keyboard.sh --layout)"
+    text = cmd[update:5000] echo -e "<sub><span size='37500' foreground='##31b7f2'>$(~/.config/hypr/scripts/keyboard.sh --icon)</span></sub> $(~/.config/hypr/scripts/keyboard.sh --layout)"
     color = rgba(255, 255, 255, 1.0)
     font_size = 24
     font_family = $FONT
-    position = -380, -10
+    position = -300, -10
     halign = right
     valign = top
 }
@@ -227,11 +221,11 @@ label {
 
 label {
     monitor =
-    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/network.sh --icon) $(~/.config/hypr/scripts/network.sh --adapter)"
+    text = cmd[update:5000] echo -e "<sub><span size='32500' foreground='##31b7f2'>$(~/.config/hypr/scripts/network.sh --icon)</span></sub>$(~/.config/hypr/scripts/network.sh --adapter)"
     color = rgba(255, 255, 255, 1.0)
     font_size = 24
     font_family = $FONT
-    position = -200, -10
+    position = -100, -10
     halign = right
     valign = top
 }
@@ -239,11 +233,12 @@ label {
 
 label {
     monitor =
-    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon)  $(~/.config/hypr/scripts/power.sh --value)%"
+    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon) $(~/.config/hypr/scripts/power.sh --value)"
     color = rgba(97, 255, 202, 1.0)
-    font_size = 24
+    color = rgba(255, 103, 103, 1.0)
+    font_size = 28
     font_family = $FONT
-    position = -10, -10
+    position = -15, -10
     halign = right
     valign = top
 }
