--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -84,8 +84,8 @@ binds {
     submap = ags
 
     bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
-    bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
-    bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
+    bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/log
+    bind = , U, exec, hyprctl dispatch submap reset; kitty -e yay -Syu
 
     submap = reset
 }
