--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -2,10 +2,10 @@
 
 windowrules {
  
-    # windowrulev2 = size 50% 50%, class:^(.*xdg-desktop-portal-gtk.*)
-    # windowrulev2 = float, class:^(.*xdg-desktop-portal-gtk.*)
-    # windowrulev2 = move 25% 25%, class:^(.*xdg-desktop-portal-gtk.*)
-    # # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = size 50% 40%, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = float, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = move 25% 30%, class:^(.*xdg-desktop-portal-gtk.*)
+    # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
     #
     #
     # # ------------------------------
@@ -92,10 +92,10 @@ windowrules {
     # -------------------------
     # windowrulev2 = stayfocused,class:(.*steam.*|.*TeamSpeak.*),title:(^$)
     # windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*steam.*|.*TeamSpeak.*)
-    # windowrulev2 = workspace 6, class:^(.*steam.*|.*TeamSpeak.*)
     windowrulev2 = float, class:^(.*TeamSpeak.*)
     windowrulev2 = float, class:^(.*steam.*)
     windowrulev2 = size 60% 60%, class:^(.*steam.*), title:^(.*Steam.*)
+    windowrulev2 = workspace 5, class:^(.*steam.*|.*TeamSpeak.*)
     windowrulev2 = centerwindow, class:^(.*steam.*), title:^(.*Steam.*)
     windowrulev2 = centerwindow, class:^(.*TeamSpeak.), title:^(.*TeamSpeak.*)
 
