mainly hyprlock changes

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -62,9 +62,9 @@ input-field {
     invert_numlock = false
     swap_font_color = false
 
-    position = 0, 400
+    position = 0, -800
     halign = center
-    valign = bottom
+    valign = center
 }
 
 label {
@@ -124,7 +124,7 @@ image {
     rotate = 0
     reload_time = -1
     reload_cmd = 
-    position = 15, -15
+    position = 2, -2
     halign = left
     valign = top
 }
@@ -132,13 +132,49 @@ image {
 
 label {
     monitor =
-    text = cmd[update:10000] echo "$USER"
-    color = rgba(49, 183, 242, 0.75)
-    font_size = 26
+    text = cmd[update:60000] echo "$USER"
+    color = rgba(49, 183, 242, 1.0)
+    font_size = 24
     font_family = $FONT
-    position = 80, -22
+    position = 100, -10
     halign = left
     valign = top
+}
+
+label {
+    monitor =
+    text = cmd[update:60000] echo -e "<span size='20000'>$(~/.config/hypr/scripts/uptime.sh)</span>"
+    color = rgba(239, 236, 254, 1.0)
+    font_size = 20
+    font_family = $FONT
+    position = 220, -15
+    halign = left
+    valign = top
+}
+
+# --------------------------------------------------------------------
+# --------------------------------- MISC -----------------------------
+# --------------------------------------------------------------------
+label {
+    monitor =
+    text = cmd[update:1000] echo -e "<span size='20000'>$(~/.config/hypr/scripts/quote.sh --quote)</span>"
+    color = rgba(239, 236, 254, 1.0)
+    font_size = 20
+    font_family = $FONT
+    position = 0, 650
+    halign = center
+    valign = center
+}
+
+label {
+    monitor =
+    text = cmd[update:1000] echo -e "<span ><i>$(~/.config/hypr/scripts/quote.sh --author)</i></span>"
+    color = rgba(239, 236, 254, 0.5)
+    font_size = 20
+    font_family = $FONT
+    position = 0, 600
+    halign = center
+    valign = center
 }
 
 # --------------------------------------------------------------------
@@ -210,10 +246,10 @@ image {
 label {
     monitor =
     text = cmd[update:5000] echo -e "<sub><span size='37500' foreground='##31b7f2'>$(~/.config/hypr/scripts/keyboard.sh --icon)</span></sub> $(~/.config/hypr/scripts/keyboard.sh --layout)"
-    color = rgba(255, 255, 255, 1.0)
+    color = rgba(239, 236, 254, 1.0)
     font_size = 24
     font_family = $FONT
-    position = -300, -10
+    position = -270, -10
     halign = right
     valign = top
 }
@@ -222,10 +258,10 @@ label {
 label {
     monitor =
     text = cmd[update:5000] echo -e "<sub><span size='32500' foreground='##31b7f2'>$(~/.config/hypr/scripts/network.sh --icon)</span></sub>$(~/.config/hypr/scripts/network.sh --adapter)"
-    color = rgba(255, 255, 255, 1.0)
+    color = rgba(239, 236, 254, 1.0)
     font_size = 24
     font_family = $FONT
-    position = -100, -10
+    position = -90, -10
     halign = right
     valign = top
 }
@@ -238,7 +274,7 @@ label {
     color = rgba(255, 103, 103, 1.0)
     font_size = 28
     font_family = $FONT
-    position = -15, -10
+    position = -15, -7
     halign = right
     valign = top
 }
