generic window; new updates window; restructuring

--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -83,9 +83,9 @@ binds {
     bind = SUPER, SPACE, submap, ags
     submap = ags
 
-    bind = , P, exec, hyprctl dispatch submap reset; ags toggle shutdown_menu
+    bind = , P, exec, hyprctl dispatch submap reset; ags toggle window_shutdown
     bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/log
-    bind = , U, exec, hyprctl dispatch submap reset; kitty -e yay -Syu
+    bind = , U, exec, hyprctl dispatch submap reset; ags toggle window_system_updates
 
     submap = reset
 }
