window updates adapted

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,5 +1,7 @@
 preload = $HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
+preload = $HOME/.config/hypr/backgrounds/regular/firewatch-dusk.png
 
 splash = false
 
-wallpaper = ,$HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
+# wallpaper = ,$HOME/.config/hypr/backgrounds/linux-elitist/ecatherina-farias.png
+wallpaper = ,$HOME/.config/hypr/backgrounds/regular/firewatch-dusk.png
