--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -84,7 +84,7 @@ binds {
     submap = ags
 
     bind = , P, exec, hyprctl dispatch submap reset; ags toggle window_shutdown
-    bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/log
+    bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/ags.log
     bind = , U, exec, hyprctl dispatch submap reset; ags toggle window_system_updates
 
     submap = reset
