just continued working on it

--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -86,6 +86,7 @@ binds {
     bind = , P, exec, hyprctl dispatch submap reset; ags toggle window_shutdown
     bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/ags.log
     bind = , U, exec, hyprctl dispatch submap reset; ags toggle window_system_updates
-    bind = , Z, exec, hypr-zoom -duration=250 -steps=50 -easing=OutBack -easingOut=InBack -interp=Linear
+    bind = , Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
+    bind = , ESCAPE, exec, hyprctl dispatch submap reset
     submap = reset
 }
