--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -1,15 +1,26 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 windowrules {
- 
-    windowrulev2 = size 50% 40%, class:^(.*xdg-desktop-portal-gtk.*)
-    windowrulev2 = float, class:^(.*xdg-desktop-portal-gtk.*)
-    windowrulev2 = move 25% 30%, class:^(.*xdg-desktop-portal-gtk.*)
+    # ------------------------------
+    # ------- Generic Dialogs ------
+    # ------------------------------
+    $pattern =.*xdg-desktop-portal-gtk.*
+    windowrulev2 = size 50% 40%, class:^($pattern)
+    windowrulev2 = float, class:^($pattern)
+    windowrulev2 = move 25% 30%, class:^($pattern)
     # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
-    #
-    #
+
+    # ------------------------------
+    # ------ Specific Dialogs ------
+    # ------------------------------
+    $pattern =.*Save Image.*
+    windowrulev2 = size 50% 40%, class:^($pattern)
+    windowrulev2 = float, class:^($pattern)
+    windowrulev2 = move 25% 30%, class:^($pattern)
+    # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
+
     # # ------------------------------
-    # # ------------ Kitty -----------
+    # # ------------ kitty -----------
     # # ------------------------------
     # windowrulev2 = float, class:^(.*kitty.*)$,title:^(.*float.*)
     # windowrulev2 = size 50% 40%, class:^(.*kitty.*)$,title:^(.*float.*)
