current wip for train ride

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,7 +33,10 @@ workspace=5
 
 xwayland {
     force_zero_scaling = true
+    use_nearest_neighbor = true
 }
+
+env = GDK_SCALE,1
 
 # -----------------------------------------------------
 # --------------------- KEYBOARD ----------------------
