wip from train; errors pending :)

--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -84,6 +84,7 @@ binds {
     submap = ags
 
     bind = , P, exec, hyprctl dispatch submap reset; ags toggle window_shutdown
+    bind = , W, exec, hyprctl dispatch submap reset; ags toggle window_wallpaper
     bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/ags.log
     bind = , U, exec, hyprctl dispatch submap reset; ags toggle window_system_updates
     bind = , Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
