--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -87,6 +87,7 @@ binds {
     bind = , W, exec, hyprctl dispatch submap reset; ags toggle window_wallpaper
     bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/ags.log
     bind = , U, exec, hyprctl dispatch submap reset; ags toggle window_system_updates
+    bind = , N, exec, hyprctl dispatch submap reset; ags toggle window_network
     bind = , Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
     bind = , ESCAPE, exec, hyprctl dispatch submap reset
     submap = reset
