window rule changed

--- a/hyprland/.config/hypr/rules.conf
+++ b/hyprland/.config/hypr/rules.conf
@@ -14,9 +14,9 @@ windowrules {
     # ------ Specific Dialogs ------
     # ------------------------------
     $pattern =.*Save Image.*
-    windowrulev2 = size 50% 40%, class:^($pattern)
+    windowrulev2 = size 50% 40%, title:^($pattern)
     windowrulev2 = float, class:^($pattern)
-    windowrulev2 = move 25% 30%, class:^($pattern)
+    windowrulev2 = move 25% 30%, title:^($pattern)
     # windowrulev2 = opacity 0.99 override 0.99 override, class:^(.*xdg-desktop-portal-gtk.*)
 
     # # ------------------------------
